developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_not_supported_in_keyman_web_output.kmn
c Tests ERROR_NotSupportedInKeymanWebOutput for `return`

store(&NAME) 'ERROR_NotSupportedInKeymanWebOutput'
store(&VERSION) '9.0'
store(&TARGETS) 'web'

begin unicode > use(main)

group(main) using keys

+ 'a' > return
